--- a/01-basic-vite-project/src/index.css
+++ b/01-basic-vite-project/src/index.css
@@ -13,6 +13,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -28,6 +30,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: yellow;
 }
 
 h1 {
