--- a/15-redux/src/components/follows/follow/Follow.css
+++ b/15-redux/src/components/follows/follow/Follow.css
@@ -1,5 +1,8 @@
-.PostComment {
+.Follow {
     display: flex;
     flex-direction: column;
     border: 1px dashed lightseagreen;
+}
+.Follow img {
+    height: 36px;
 }
